--- a/Reviook_app/pom.xml
+++ b/Reviook_app/pom.xml
@@ -25,6 +25,13 @@
             <artifactId>javafx-controls</artifactId>
             <version>17-ea+11</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/javax.xml.bind/jaxb-api -->
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.1</version>
+        </dependency>
+
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-fxml</artifactId>
